[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/EditTileSetScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 18
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="EditTileSetScreen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Edit TileSet"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PreviewLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 100.0
margin/right = 150.0
margin/bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Preview:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TileList" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 120.0
margin/right = 760.0
margin/bottom = 480.0
custom_fonts/font = SubResource( 2 )

[node name="NameLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 770.0
margin/top = 100.0
margin/right = 858.0
margin/bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Tile Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TileName" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 770.0
margin/top = 120.0
margin/right = 960.0
margin/bottom = 149.0
custom_fonts/font = SubResource( 2 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="RenameButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 770.0
margin/top = 160.0
margin/right = 851.0
margin/bottom = 185.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rename"
flat = false

[node name="ShapeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 770.0
margin/top = 210.0
margin/right = 860.0
margin/bottom = 229.0
custom_fonts/font = SubResource( 2 )
text = "Tile Shape:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TileShapes" type="OptionButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 770.0
margin/top = 230.0
margin/right = 960.0
margin/bottom = 255.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="BackButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 520.0
margin/right = 477.0
margin/bottom = 545.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Back"
flat = false

[node name="ExportButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 490.0
margin/top = 520.0
margin/right = 555.0
margin/bottom = 545.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Export"
flat = false

[node name="ExportDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 50.0
margin/right = 1000.0
margin/bottom = 570.0
popup/exclusive = false
window/title = "Export"
dialog/hide_on_ok = false
mode = 4
access = 2
filters = StringArray( "*.tscn;Scene" )
show_hidden_files = false

[connection signal="item_selected" from="TileList" to="." method="_on_TileList_item_selected"]

[connection signal="pressed" from="RenameButton" to="." method="_on_RenameButton_pressed"]

[connection signal="item_selected" from="TileShapes" to="." method="_on_TileShapes_item_selected"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="ExportButton" to="." method="_on_ExportButton_pressed"]

[connection signal="file_selected" from="ExportDialog" to="." method="_on_ExportDialog_file_selected"]


